--- a/index.html
+++ b/index.html
@@ -140,39 +140,39 @@
 				<div class="done-left">
 					<ul>
 						<li>
-							<a href="images/demo/hover.jpg" targrt="_blank"><img src="img/accordion.png"  alt="Hover CSS3" /></a>
+							<img src="img/accordion.png"  />
 							<div class="demo-mask">
-								<a href="images/demo/hover.jpg" target="_blank" class="demo-link" class="picPos"></a>
+								<a href="demo/sfq.html" target="_blank" class="demo-link"></a>
 							</div>
 						</li>
 						<li>
-							<a href="images/demo/CSS3layout.jpg" targrt="_blank"><img src="img/magnifer.png" alt="CSS3 Layout" /></a>
+							<img src="img/magnifer.png" />
 							<div class="demo-mask">
-								<a href="images/demo/CSS3layout.jpg" target="_blank" class="demo-link" class="picPos"></a>
+								<a href="demo/fdj.html" target="_blank" class="demo-link"></a>
 							</div>
 							</li>
 						<li>
-							<a href="images/demo/auto-serve.jpg" targrt="_blank"><img src="img/360.png"/></a>
+							<img src="img/360.png"/>
 							<div class="demo-mask">
-								<a href="images/demo/auto-serve.jpg" target="_blank" class="demo-link" class="picPos"></a>
+								<a href="demo/360.html" target="_blank" class="demo-link"></a>
 							</div>
 						</li>
 						<li>
-							<a href="images/demo/nanling.jpg" targrt="_blank"><img src="img/rotate.png"/></a>
+							<img src="img/rotate.png"/>
 							<div class="demo-mask">
-								<a href="images/demo/nanling.jpg" target="_blank" class="demo-link" class="picPos"></a>
+								<a href="demo/rotate.html" target="_blank" class="demo-link"></a>
 							</div>
 						</li>
 						<li>
-							<a href="images/demo/hn.png" targrt="_blank"><img src="img/3Dbox.png"/></a>
+							<img src="img/3Dbox.png"/>
 							<div class="demo-mask">
-								<a href="images/demo/hn.png" target="_blank" class="demo-link" class="picPos"></a>
+								<a href="demo/3Dbox.html" target="_blank" class="demo-link"></a>
 							</div>
 						</li>
 						<li>
-							<a href="images/demo/chuzhou.png" targrt="_blank"><img src="img/canvas.png"/></a>
+							<img src="img/canvas.png"/>
 							<div class="demo-mask">
-								<a href="images/demo/chuzhou.png" target="_blank" class="demo-link" class="picPos"></a>
+								<a href="demo/canvas.html" target="_blank" class="demo-link"></a>
 							</div>
 						</li>
 					</ul>
