--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						<p>这是我的部分作品。</p>
 						<p>如果你感兴趣，可以点击链接查看效果。</p>
 						<p>如果想浏览更多作品，请访问我的GitHub</p>
-						<a class="btn" href="" target="_blank">GitHub</a>
+						<a class="btn" href="https://github.com/itacha" target="_blank">GitHub</a>
 					</div>
 				</div>
 			</div>
